@@ -1,24 +1,35 @@
 package io.datahubproject.openapi.v2.controller;
 
-import static io.datahubproject.openapi.v2.utils.ControllerUtil.checkAuthorized;
+import static com.linkedin.metadata.authorization.ApiOperation.CREATE;
+import static com.linkedin.metadata.authorization.ApiOperation.DELETE;
+import static com.linkedin.metadata.authorization.ApiOperation.EXISTS;
+import static com.linkedin.metadata.authorization.ApiOperation.READ;
+import static com.linkedin.metadata.authorization.ApiOperation.UPDATE;
 
 import com.datahub.authentication.Actor;
 import com.datahub.authentication.Authentication;
 import com.datahub.authentication.AuthenticationContext;
+import com.datahub.authorization.AuthUtil;
 import com.datahub.authorization.AuthorizerChain;
 import com.datahub.util.RecordUtils;
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.ImmutableList;
 import com.linkedin.common.urn.Urn;
 import com.linkedin.common.urn.UrnUtils;
 import com.linkedin.data.ByteString;
 import com.linkedin.data.template.RecordTemplate;
 import com.linkedin.entity.EnvelopedAspect;
+import com.linkedin.events.metadata.ChangeType;
+import com.linkedin.metadata.aspect.AspectRetriever;
+import com.linkedin.metadata.aspect.batch.AspectsBatch;
+import com.linkedin.metadata.aspect.batch.BatchItem;
 import com.linkedin.metadata.aspect.batch.ChangeMCP;
 import com.linkedin.metadata.aspect.patch.GenericJsonPatch;
 import com.linkedin.metadata.aspect.patch.template.common.GenericPatchTemplate;
-import com.linkedin.metadata.authorization.PoliciesConfig;
+import com.linkedin.metadata.entity.EntityApiUtils;
 import com.linkedin.metadata.entity.EntityService;
+import com.linkedin.metadata.entity.IngestResult;
 import com.linkedin.metadata.entity.UpdateAspectResult;
 import com.linkedin.metadata.entity.ebean.batch.AspectsBatchImpl;
 import com.linkedin.metadata.entity.ebean.batch.ChangeItemImpl;
@@ -38,6 +49,10 @@ import com.linkedin.metadata.utils.SearchUtil;
 import com.linkedin.mxe.SystemMetadata;
 import com.linkedin.util.Pair;
 import io.datahubproject.metadata.context.OperationContext;
+import io.datahubproject.metadata.context.RequestContext;
+import io.datahubproject.openapi.exception.UnauthorizedException;
+import io.datahubproject.openapi.v2.models.BatchGetUrnRequest;
+import io.datahubproject.openapi.v2.models.BatchGetUrnResponse;
 import io.datahubproject.openapi.v2.models.GenericEntity;
 import io.datahubproject.openapi.v2.models.GenericScrollResult;
 import io.swagger.v3.oas.annotations.Operation;
@@ -45,9 +60,13 @@ import io.swagger.v3.oas.annotations.tags.Tag;
 import java.lang.reflect.InvocationTargetException;
 import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
 import java.util.HashSet;
+import java.util.Iterator;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -81,7 +100,6 @@ public class EntityController {
   @Autowired private SearchService searchService;
   @Autowired private EntityService<?> entityService;
   @Autowired private AuthorizerChain authorizationChain;
-  @Autowired private boolean restApiAuthorizationEnabled;
   @Autowired private ObjectMapper objectMapper;
 
   @Qualifier("systemOperationContext")
@@ -105,18 +123,20 @@ public class EntityController {
       throws URISyntaxException {
 
     EntitySpec entitySpec = entityRegistry.getEntitySpec(entityName);
-
     Authentication authentication = AuthenticationContext.getAuthentication();
-    if (restApiAuthorizationEnabled) {
-      checkAuthorized(
-          authorizationChain,
-          authentication.getActor(),
-          entitySpec,
-          ImmutableList.of(PoliciesConfig.GET_ENTITY_PRIVILEGE.getType()));
+
+    if (!AuthUtil.isAPIAuthorizedEntityType(authentication, authorizationChain, READ, entityName)) {
+      throw new UnauthorizedException(
+          authentication.getActor().toUrnStr() + " is unauthorized to " + READ + "  entities.");
     }
+
     OperationContext opContext =
         OperationContext.asSession(
-            systemOperationContext, authorizationChain, authentication, true);
+            systemOperationContext,
+            RequestContext.builder().buildOpenapi("getEntities", entityName),
+            authorizationChain,
+            authentication,
+            true);
 
     // TODO: support additional and multiple sort params
     SortCriterion sortCriterion = SearchUtil.sortBy(sortField, SortOrder.valueOf(sortOrder));
@@ -132,16 +152,58 @@ public class EntityController {
             null,
             count);
 
+    if (!AuthUtil.isAPIAuthorizedResult(authentication, authorizationChain, result)) {
+      throw new UnauthorizedException(
+          authentication.getActor().toUrnStr() + " is unauthorized to " + READ + " entities.");
+    }
+
     return ResponseEntity.ok(
         GenericScrollResult.<GenericEntity>builder()
-            .results(toRecordTemplates(result.getEntities(), aspectNames, withSystemMetadata))
+            .results(
+                toRecordTemplates(opContext, result.getEntities(), aspectNames, withSystemMetadata))
             .scrollId(result.getScrollId())
             .build());
   }
 
   @Tag(name = "Generic Entities")
-  @GetMapping(value = "/{entityName}/{entityUrn}", produces = MediaType.APPLICATION_JSON_VALUE)
-  @Operation(summary = "Get an entity")
+  @PostMapping(value = "/batch/{entityName}", produces = MediaType.APPLICATION_JSON_VALUE)
+  @Operation(summary = "Get a batch of entities")
+  public ResponseEntity<BatchGetUrnResponse> getEntityBatch(
+      @PathVariable("entityName") String entityName, @RequestBody BatchGetUrnRequest request)
+      throws URISyntaxException {
+
+    List<Urn> urns = request.getUrns().stream().map(UrnUtils::getUrn).collect(Collectors.toList());
+
+    Authentication authentication = AuthenticationContext.getAuthentication();
+    if (!AuthUtil.isAPIAuthorizedEntityUrns(authentication, authorizationChain, READ, urns)) {
+      throw new UnauthorizedException(
+          authentication.getActor().toUrnStr() + " is unauthorized to " + READ + "  entities.");
+    }
+    OperationContext opContext =
+        OperationContext.asSession(
+            systemOperationContext,
+            RequestContext.builder().buildOpenapi("getEntityBatch", entityName),
+            authorizationChain,
+            authentication,
+            true);
+
+    return ResponseEntity.of(
+        Optional.of(
+            BatchGetUrnResponse.builder()
+                .entities(
+                    new ArrayList<>(
+                        toRecordTemplates(
+                            opContext,
+                            urns,
+                            new HashSet<>(request.getAspectNames()),
+                            request.isWithSystemMetadata())))
+                .build()));
+  }
+
+  @Tag(name = "Generic Entities")
+  @GetMapping(
+      value = "/{entityName}/{entityUrn:urn:li:.+}",
+      produces = MediaType.APPLICATION_JSON_VALUE)
   public ResponseEntity<GenericEntity> getEntity(
       @PathVariable("entityName") String entityName,
       @PathVariable("entityUrn") String entityUrn,
@@ -150,20 +212,23 @@ public class EntityController {
           Boolean withSystemMetadata)
       throws URISyntaxException {
 
-    if (restApiAuthorizationEnabled) {
-      Authentication authentication = AuthenticationContext.getAuthentication();
-      EntitySpec entitySpec = entityRegistry.getEntitySpec(entityName);
-      checkAuthorized(
-          authorizationChain,
-          authentication.getActor(),
-          entitySpec,
-          entityUrn,
-          ImmutableList.of(PoliciesConfig.GET_ENTITY_PRIVILEGE.getType()));
+    Urn urn = UrnUtils.getUrn(entityUrn);
+    Authentication authentication = AuthenticationContext.getAuthentication();
+    if (!AuthUtil.isAPIAuthorizedEntityUrns(
+        authentication, authorizationChain, READ, List.of(urn))) {
+      throw new UnauthorizedException(
+          authentication.getActor().toUrnStr() + " is unauthorized to " + READ + " entities.");
     }
+    OperationContext opContext =
+        OperationContext.asSession(
+            systemOperationContext,
+            RequestContext.builder().buildOpenapi("getEntity", entityName),
+            authorizationChain,
+            authentication,
+            true);
 
     return ResponseEntity.of(
-        toRecordTemplates(List.of(UrnUtils.getUrn(entityUrn)), aspectNames, withSystemMetadata)
-            .stream()
+        toRecordTemplates(opContext, List.of(urn), aspectNames, withSystemMetadata).stream()
             .findFirst());
   }
 
@@ -175,18 +240,22 @@ public class EntityController {
   public ResponseEntity<Object> headEntity(
       @PathVariable("entityName") String entityName, @PathVariable("entityUrn") String entityUrn) {
 
-    if (restApiAuthorizationEnabled) {
-      Authentication authentication = AuthenticationContext.getAuthentication();
-      EntitySpec entitySpec = entityRegistry.getEntitySpec(entityName);
-      checkAuthorized(
-          authorizationChain,
-          authentication.getActor(),
-          entitySpec,
-          entityUrn,
-          ImmutableList.of(PoliciesConfig.GET_ENTITY_PRIVILEGE.getType()));
+    Urn urn = UrnUtils.getUrn(entityUrn);
+    Authentication authentication = AuthenticationContext.getAuthentication();
+    if (!AuthUtil.isAPIAuthorizedEntityUrns(
+        authentication, authorizationChain, EXISTS, List.of(urn))) {
+      throw new UnauthorizedException(
+          authentication.getActor().toUrnStr() + " is unauthorized to " + EXISTS + " entities.");
     }
+    OperationContext opContext =
+        OperationContext.asSession(
+            systemOperationContext,
+            RequestContext.builder().buildOpenapi("headEntity", entityName),
+            authorizationChain,
+            authentication,
+            true);
 
-    return exists(UrnUtils.getUrn(entityUrn), null)
+    return exists(opContext, urn, null)
         ? ResponseEntity.noContent().build()
         : ResponseEntity.notFound().build();
   }
@@ -199,24 +268,37 @@ public class EntityController {
   public ResponseEntity<Object> getAspect(
       @PathVariable("entityName") String entityName,
       @PathVariable("entityUrn") String entityUrn,
-      @PathVariable("aspectName") String aspectName)
+      @PathVariable("aspectName") String aspectName,
+      @RequestParam(value = "systemMetadata", required = false, defaultValue = "false")
+          Boolean withSystemMetadata)
       throws URISyntaxException {
 
-    if (restApiAuthorizationEnabled) {
-      Authentication authentication = AuthenticationContext.getAuthentication();
-      EntitySpec entitySpec = entityRegistry.getEntitySpec(entityName);
-      checkAuthorized(
-          authorizationChain,
-          authentication.getActor(),
-          entitySpec,
-          entityUrn,
-          ImmutableList.of(PoliciesConfig.GET_ENTITY_PRIVILEGE.getType()));
+    Urn urn = UrnUtils.getUrn(entityUrn);
+    Authentication authentication = AuthenticationContext.getAuthentication();
+    if (!AuthUtil.isAPIAuthorizedEntityUrns(
+        authentication, authorizationChain, READ, List.of(urn))) {
+      throw new UnauthorizedException(
+          authentication.getActor().toUrnStr() + " is unauthorized to " + READ + " entities.");
     }
+    OperationContext opContext =
+        OperationContext.asSession(
+            systemOperationContext,
+            RequestContext.builder().buildOpenapi("getAspect", entityName),
+            authorizationChain,
+            authentication,
+            true);
 
     return ResponseEntity.of(
-        toRecordTemplates(List.of(UrnUtils.getUrn(entityUrn)), Set.of(aspectName), true).stream()
+        toRecordTemplates(opContext, List.of(urn), Set.of(aspectName), withSystemMetadata).stream()
             .findFirst()
-            .flatMap(e -> e.getAspects().values().stream().findFirst()));
+            .flatMap(
+                e ->
+                    e.getAspects().entrySet().stream()
+                        .filter(
+                            entry ->
+                                entry.getKey().equals(lookupAspectSpec(urn, aspectName).getName()))
+                        .map(Map.Entry::getValue)
+                        .findFirst()));
   }
 
   @Tag(name = "Generic Aspects")
@@ -229,18 +311,22 @@ public class EntityController {
       @PathVariable("entityUrn") String entityUrn,
       @PathVariable("aspectName") String aspectName) {
 
-    if (restApiAuthorizationEnabled) {
-      Authentication authentication = AuthenticationContext.getAuthentication();
-      EntitySpec entitySpec = entityRegistry.getEntitySpec(entityName);
-      checkAuthorized(
-          authorizationChain,
-          authentication.getActor(),
-          entitySpec,
-          entityUrn,
-          ImmutableList.of(PoliciesConfig.GET_ENTITY_PRIVILEGE.getType()));
+    Urn urn = UrnUtils.getUrn(entityUrn);
+    Authentication authentication = AuthenticationContext.getAuthentication();
+    if (!AuthUtil.isAPIAuthorizedEntityUrns(
+        authentication, authorizationChain, EXISTS, List.of(urn))) {
+      throw new UnauthorizedException(
+          authentication.getActor().toUrnStr() + " is unauthorized to " + EXISTS + " entities.");
     }
+    OperationContext opContext =
+        OperationContext.asSession(
+            systemOperationContext,
+            RequestContext.builder().buildOpenapi("headAspect", entityName),
+            authorizationChain,
+            authentication,
+            true);
 
-    return exists(UrnUtils.getUrn(entityUrn), aspectName)
+    return exists(opContext, urn, lookupAspectSpec(urn, aspectName).getName())
         ? ResponseEntity.noContent().build()
         : ResponseEntity.notFound().build();
   }
@@ -252,18 +338,59 @@ public class EntityController {
       @PathVariable("entityName") String entityName, @PathVariable("entityUrn") String entityUrn) {
 
     EntitySpec entitySpec = entityRegistry.getEntitySpec(entityName);
+    Urn urn = UrnUtils.getUrn(entityUrn);
+    Authentication authentication = AuthenticationContext.getAuthentication();
+    if (!AuthUtil.isAPIAuthorizedEntityUrns(
+        authentication, authorizationChain, DELETE, List.of(urn))) {
+      throw new UnauthorizedException(
+          authentication.getActor().toUrnStr() + " is unauthorized to " + DELETE + " entities.");
+    }
+    OperationContext opContext =
+        OperationContext.asSession(
+            systemOperationContext,
+            RequestContext.builder().buildOpenapi("deleteEntity", entityName),
+            authorizationChain,
+            authentication,
+            true);
 
-    if (restApiAuthorizationEnabled) {
-      Authentication authentication = AuthenticationContext.getAuthentication();
-      checkAuthorized(
-          authorizationChain,
-          authentication.getActor(),
-          entitySpec,
-          entityUrn,
-          ImmutableList.of(PoliciesConfig.DELETE_ENTITY_PRIVILEGE.getType()));
+    entityService.deleteAspect(opContext, entityUrn, entitySpec.getKeyAspectName(), Map.of(), true);
+  }
+
+  @Tag(name = "Generic Entities")
+  @PostMapping(value = "/{entityName}", produces = MediaType.APPLICATION_JSON_VALUE)
+  @Operation(summary = "Create a batch of entities.")
+  public ResponseEntity<List<GenericEntity>> createEntity(
+      @PathVariable("entityName") String entityName,
+      @RequestParam(value = "async", required = false, defaultValue = "true") Boolean async,
+      @RequestParam(value = "systemMetadata", required = false, defaultValue = "false")
+          Boolean withSystemMetadata,
+      @RequestBody @Nonnull String jsonEntityList)
+      throws URISyntaxException, JsonProcessingException {
+
+    Authentication authentication = AuthenticationContext.getAuthentication();
+
+    if (!AuthUtil.isAPIAuthorizedEntityType(
+        authentication, authorizationChain, CREATE, entityName)) {
+      throw new UnauthorizedException(
+          authentication.getActor().toUrnStr() + " is unauthorized to " + CREATE + " entities.");
     }
 
-    entityService.deleteAspect(entityUrn, entitySpec.getKeyAspectName(), Map.of(), true);
+    OperationContext opContext =
+        OperationContext.asSession(
+            systemOperationContext,
+            RequestContext.builder().buildOpenapi("createEntity", entityName),
+            authorizationChain,
+            authentication,
+            true);
+
+    AspectsBatch batch = toMCPBatch(opContext, jsonEntityList, authentication.getActor());
+    Set<IngestResult> results = entityService.ingestProposal(opContext, batch, async);
+
+    if (!async) {
+      return ResponseEntity.ok(toEntityListResponse(results, withSystemMetadata));
+    } else {
+      return ResponseEntity.accepted().body(toEntityListResponse(results, withSystemMetadata));
+    }
   }
 
   @Tag(name = "Generic Aspects")
@@ -274,18 +401,23 @@ public class EntityController {
       @PathVariable("entityUrn") String entityUrn,
       @PathVariable("aspectName") String aspectName) {
 
-    if (restApiAuthorizationEnabled) {
-      Authentication authentication = AuthenticationContext.getAuthentication();
-      EntitySpec entitySpec = entityRegistry.getEntitySpec(entityName);
-      checkAuthorized(
-          authorizationChain,
-          authentication.getActor(),
-          entitySpec,
-          entityUrn,
-          ImmutableList.of(PoliciesConfig.DELETE_ENTITY_PRIVILEGE.getType()));
+    Urn urn = UrnUtils.getUrn(entityUrn);
+    Authentication authentication = AuthenticationContext.getAuthentication();
+    if (!AuthUtil.isAPIAuthorizedEntityUrns(
+        authentication, authorizationChain, DELETE, List.of(urn))) {
+      throw new UnauthorizedException(
+          authentication.getActor().toUrnStr() + " is unauthorized to " + DELETE + " entities.");
     }
+    OperationContext opContext =
+        OperationContext.asSession(
+            systemOperationContext,
+            RequestContext.builder().buildOpenapi("deleteAspect", entityName),
+            authorizationChain,
+            authentication,
+            true);
 
-    entityService.deleteAspect(entityUrn, aspectName, Map.of(), true);
+    entityService.deleteAspect(
+        opContext, entityUrn, lookupAspectSpec(urn, aspectName).getName(), Map.of(), true);
   }
 
   @Tag(name = "Generic Aspects")
@@ -299,29 +431,43 @@ public class EntityController {
       @PathVariable("aspectName") String aspectName,
       @RequestParam(value = "systemMetadata", required = false, defaultValue = "false")
           Boolean withSystemMetadata,
+      @RequestParam(value = "createIfNotExists", required = false, defaultValue = "false")
+          Boolean createIfNotExists,
       @RequestBody @Nonnull String jsonAspect)
       throws URISyntaxException {
 
+    Urn urn = UrnUtils.getUrn(entityUrn);
     EntitySpec entitySpec = entityRegistry.getEntitySpec(entityName);
     Authentication authentication = AuthenticationContext.getAuthentication();
 
-    if (restApiAuthorizationEnabled) {
-      checkAuthorized(
-          authorizationChain,
-          authentication.getActor(),
-          entitySpec,
-          entityUrn,
-          ImmutableList.of(PoliciesConfig.EDIT_ENTITY_PRIVILEGE.getType()));
+    if (!AuthUtil.isAPIAuthorizedEntityUrns(
+        authentication, authorizationChain, CREATE, List.of(urn))) {
+      throw new UnauthorizedException(
+          authentication.getActor().toUrnStr() + " is unauthorized to " + CREATE + " entities.");
     }
+    OperationContext opContext =
+        OperationContext.asSession(
+            systemOperationContext,
+            RequestContext.builder().buildOpenapi("createAspect", entityName),
+            authorizationChain,
+            authentication,
+            true);
 
-    AspectSpec aspectSpec = entitySpec.getAspectSpec(aspectName);
+    AspectSpec aspectSpec = lookupAspectSpec(entitySpec, aspectName);
     ChangeMCP upsert =
-        toUpsertItem(UrnUtils.getUrn(entityUrn), aspectSpec, jsonAspect, authentication.getActor());
+        toUpsertItem(
+            opContext.getRetrieverContext().get().getAspectRetriever(),
+            urn,
+            aspectSpec,
+            createIfNotExists,
+            jsonAspect,
+            authentication.getActor());
 
     List<UpdateAspectResult> results =
         entityService.ingestAspects(
+            opContext,
             AspectsBatchImpl.builder()
-                .aspectRetriever(entityService)
+                .retrieverContext(opContext.getRetrieverContext().get())
                 .items(List.of(upsert))
                 .build(),
             true,
@@ -362,22 +508,25 @@ public class EntityController {
           InstantiationException,
           IllegalAccessException {
 
+    Urn urn = UrnUtils.getUrn(entityUrn);
     EntitySpec entitySpec = entityRegistry.getEntitySpec(entityName);
     Authentication authentication = AuthenticationContext.getAuthentication();
-
-    if (restApiAuthorizationEnabled) {
-      checkAuthorized(
-          authorizationChain,
-          authentication.getActor(),
-          entitySpec,
-          entityUrn,
-          ImmutableList.of(PoliciesConfig.EDIT_ENTITY_PRIVILEGE.getType()));
+    if (!AuthUtil.isAPIAuthorizedEntityUrns(
+        authentication, authorizationChain, UPDATE, List.of(urn))) {
+      throw new UnauthorizedException(
+          authentication.getActor().toUrnStr() + " is unauthorized to " + UPDATE + " entities.");
     }
+    OperationContext opContext =
+        OperationContext.asSession(
+            systemOperationContext,
+            RequestContext.builder().buildOpenapi("patchAspect", entityName),
+            authorizationChain,
+            authentication,
+            true);
 
-    RecordTemplate currentValue =
-        entityService.getAspect(UrnUtils.getUrn(entityUrn), aspectName, 0);
+    AspectSpec aspectSpec = lookupAspectSpec(entitySpec, aspectName);
+    RecordTemplate currentValue = entityService.getAspect(opContext, urn, aspectSpec.getName(), 0);
 
-    AspectSpec aspectSpec = entitySpec.getAspectSpec(aspectName);
     GenericPatchTemplate<? extends RecordTemplate> genericPatchTemplate =
         GenericPatchTemplate.builder()
             .genericJsonPatch(patch)
@@ -387,6 +536,7 @@ public class EntityController {
             .build();
     ChangeMCP upsert =
         toUpsertItem(
+            opContext.getRetrieverContext().get().getAspectRetriever(),
             UrnUtils.getUrn(entityUrn),
             aspectSpec,
             currentValue,
@@ -395,8 +545,9 @@ public class EntityController {
 
     List<UpdateAspectResult> results =
         entityService.ingestAspects(
+            opContext,
             AspectsBatchImpl.builder()
-                .aspectRetriever(entityService)
+                .retrieverContext(opContext.getRetrieverContext().get())
                 .items(List.of(upsert))
                 .build(),
             true,
@@ -412,29 +563,36 @@ public class EntityController {
                         .build(
                             objectMapper,
                             Map.of(
-                                aspectName,
+                                aspectSpec.getName(),
                                 Pair.of(
                                     result.getNewValue(),
                                     withSystemMetadata ? result.getNewSystemMetadata() : null)))));
   }
 
   private List<GenericEntity> toRecordTemplates(
-      SearchEntityArray searchEntities, Set<String> aspectNames, boolean withSystemMetadata)
+      @Nonnull OperationContext opContext,
+      SearchEntityArray searchEntities,
+      Set<String> aspectNames,
+      boolean withSystemMetadata)
       throws URISyntaxException {
     return toRecordTemplates(
+        opContext,
         searchEntities.stream().map(SearchEntity::getEntity).collect(Collectors.toList()),
         aspectNames,
         withSystemMetadata);
   }
 
-  private Boolean exists(Urn urn, @Nullable String aspect) {
+  private Boolean exists(@Nonnull OperationContext opContext, Urn urn, @Nullable String aspect) {
     return aspect == null
-        ? entityService.exists(urn, true)
-        : entityService.exists(urn, aspect, true);
+        ? entityService.exists(opContext, urn, true)
+        : entityService.exists(opContext, urn, aspect, true);
   }
 
   private List<GenericEntity> toRecordTemplates(
-      List<Urn> urns, Set<String> aspectNames, boolean withSystemMetadata)
+      @Nonnull OperationContext opContext,
+      List<Urn> urns,
+      Set<String> aspectNames,
+      boolean withSystemMetadata)
       throws URISyntaxException {
     if (urns.isEmpty()) {
       return List.of();
@@ -443,7 +601,11 @@ public class EntityController {
 
       Map<Urn, List<EnvelopedAspect>> aspects =
           entityService.getLatestEnvelopedAspects(
-              urnsSet, resolveAspectNames(urnsSet, aspectNames));
+              opContext,
+              urnsSet,
+              resolveAspectNames(urnsSet, aspectNames).stream()
+                  .map(AspectSpec::getName)
+                  .collect(Collectors.toSet()));
 
       return urns.stream()
           .map(
@@ -457,18 +619,21 @@ public class EntityController {
     }
   }
 
-  private Set<String> resolveAspectNames(Set<Urn> urns, Set<String> requestedNames) {
-    if (requestedNames.isEmpty()) {
+  private Set<AspectSpec> resolveAspectNames(Set<Urn> urns, Set<String> requestedAspectNames) {
+    if (requestedAspectNames.isEmpty()) {
       return urns.stream()
           .flatMap(u -> entityRegistry.getEntitySpec(u.getEntityType()).getAspectSpecs().stream())
-          .map(AspectSpec::getName)
           .collect(Collectors.toSet());
     } else {
       // ensure key is always present
       return Stream.concat(
-              requestedNames.stream(),
               urns.stream()
-                  .map(u -> entityRegistry.getEntitySpec(u.getEntityType()).getKeyAspectName()))
+                  .flatMap(
+                      urn ->
+                          requestedAspectNames.stream()
+                              .map(aspectName -> lookupAspectSpec(urn, aspectName))),
+              urns.stream()
+                  .map(u -> entityRegistry.getEntitySpec(u.getEntityType()).getKeyAspectSpec()))
           .collect(Collectors.toSet());
     }
   }
@@ -487,7 +652,7 @@ public class EntityController {
   }
 
   private AspectSpec lookupAspectSpec(Urn urn, String aspectName) {
-    return entityRegistry.getEntitySpec(urn.getEntityType()).getAspectSpec(aspectName);
+    return lookupAspectSpec(entityRegistry.getEntitySpec(urn.getEntityType()), aspectName);
   }
 
   private RecordTemplate toRecordTemplate(AspectSpec aspectSpec, EnvelopedAspect envelopedAspect) {
@@ -496,33 +661,128 @@ public class EntityController {
   }
 
   private ChangeMCP toUpsertItem(
-      Urn entityUrn, AspectSpec aspectSpec, String jsonAspect, Actor actor)
+      @Nonnull AspectRetriever aspectRetriever,
+      Urn entityUrn,
+      AspectSpec aspectSpec,
+      Boolean createIfNotExists,
+      String jsonAspect,
+      Actor actor)
       throws URISyntaxException {
     return ChangeItemImpl.builder()
         .urn(entityUrn)
         .aspectName(aspectSpec.getName())
+        .changeType(Boolean.TRUE.equals(createIfNotExists) ? ChangeType.CREATE : ChangeType.UPSERT)
         .auditStamp(AuditStampUtils.createAuditStamp(actor.toUrnStr()))
         .recordTemplate(
             GenericRecordUtils.deserializeAspect(
                 ByteString.copyString(jsonAspect, StandardCharsets.UTF_8),
                 GenericRecordUtils.JSON,
                 aspectSpec))
-        .build(entityService);
+        .build(aspectRetriever);
   }
 
   private ChangeMCP toUpsertItem(
+      @Nonnull AspectRetriever aspectRetriever,
       @Nonnull Urn urn,
       @Nonnull AspectSpec aspectSpec,
       @Nullable RecordTemplate currentValue,
       @Nonnull GenericPatchTemplate<? extends RecordTemplate> genericPatchTemplate,
-      @Nonnull Actor actor)
-      throws URISyntaxException {
+      @Nonnull Actor actor) {
     return ChangeItemImpl.fromPatch(
         urn,
         aspectSpec,
         currentValue,
         genericPatchTemplate,
         AuditStampUtils.createAuditStamp(actor.toUrnStr()),
-        entityService);
+        aspectRetriever);
+  }
+
+  private AspectsBatch toMCPBatch(
+      @Nonnull OperationContext opContext, String entityArrayList, Actor actor)
+      throws JsonProcessingException, URISyntaxException {
+    JsonNode entities = objectMapper.readTree(entityArrayList);
+
+    List<BatchItem> items = new LinkedList<>();
+    if (entities.isArray()) {
+      Iterator<JsonNode> entityItr = entities.iterator();
+      while (entityItr.hasNext()) {
+        JsonNode entity = entityItr.next();
+        Urn entityUrn = UrnUtils.getUrn(entity.get("urn").asText());
+
+        Iterator<Map.Entry<String, JsonNode>> aspectItr = entity.get("aspects").fields();
+        while (aspectItr.hasNext()) {
+          Map.Entry<String, JsonNode> aspect = aspectItr.next();
+
+          AspectSpec aspectSpec = lookupAspectSpec(entityUrn, aspect.getKey());
+
+          if (aspectSpec != null) {
+            ChangeItemImpl.ChangeItemImplBuilder builder =
+                ChangeItemImpl.builder()
+                    .urn(entityUrn)
+                    .aspectName(aspectSpec.getName())
+                    .auditStamp(AuditStampUtils.createAuditStamp(actor.toUrnStr()))
+                    .recordTemplate(
+                        GenericRecordUtils.deserializeAspect(
+                            ByteString.copyString(
+                                objectMapper.writeValueAsString(aspect.getValue().get("value")),
+                                StandardCharsets.UTF_8),
+                            GenericRecordUtils.JSON,
+                            aspectSpec));
+
+            if (aspect.getValue().has("systemMetadata")) {
+              builder.systemMetadata(
+                  EntityApiUtils.parseSystemMetadata(
+                      objectMapper.writeValueAsString(aspect.getValue().get("systemMetadata"))));
+            }
+
+            items.add(builder.build(opContext.getRetrieverContext().get().getAspectRetriever()));
+          }
+        }
+      }
+    }
+
+    return AspectsBatchImpl.builder()
+        .items(items)
+        .retrieverContext(opContext.getRetrieverContext().get())
+        .build();
+  }
+
+  public List<GenericEntity> toEntityListResponse(
+      Set<IngestResult> ingestResults, boolean withSystemMetadata) {
+    List<GenericEntity> responseList = new LinkedList<>();
+
+    Map<Urn, List<IngestResult>> entityMap =
+        ingestResults.stream().collect(Collectors.groupingBy(IngestResult::getUrn));
+    for (Map.Entry<Urn, List<IngestResult>> urnAspects : entityMap.entrySet()) {
+      Map<String, Pair<RecordTemplate, SystemMetadata>> aspectsMap =
+          urnAspects.getValue().stream()
+              .map(
+                  ingest ->
+                      Map.entry(
+                          ingest.getRequest().getAspectName(),
+                          Pair.of(
+                              ingest.getRequest().getRecordTemplate(),
+                              withSystemMetadata ? ingest.getRequest().getSystemMetadata() : null)))
+              .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+      responseList.add(
+          GenericEntity.builder()
+              .urn(urnAspects.getKey().toString())
+              .build(objectMapper, aspectsMap));
+    }
+    return responseList;
+  }
+
+  /**
+   * Case-insensitive fallback
+   *
+   * @return
+   */
+  private static AspectSpec lookupAspectSpec(EntitySpec entitySpec, String aspectName) {
+    return entitySpec.getAspectSpec(aspectName) != null
+        ? entitySpec.getAspectSpec(aspectName)
+        : entitySpec.getAspectSpecs().stream()
+            .filter(aspec -> aspec.getName().toLowerCase().equals(aspectName))
+            .findFirst()
+            .get();
   }
 }
